Added more L13 slides.

--- a/lecture13/index.html
+++ b/lecture13/index.html
@@ -300,10 +300,26 @@ $(document).ready(function() {
 
 <section>
     <h2>The structured coalescent</h2>
+
+    <ul>
+        <li>Backward in time genealogical process corresponding to </li>
+    </ul>
 </section>
 
 <section>
     <h2>The effect of structure on tree shape</h2>
+
+    <div style="width:100%;height:400px;position:relative">
+    <img data-src="treeColours.png" style="width:100%;position:absolute;top:0;left:0">
+    <img class="fragment" data-src="treeNoColours.png" style="width:100%;position:absolute;top:0;left:0">
+    </div>
+
+    <div class="fragment">
+    <b>Signal for structure remains, even when tree is not coloured.</b>
+    <blockquote class="fragment">
+        Failure to account for structure can bias phylogenetic analyses.
+    </blockquote>
+
 </section>
 
 <section>
@@ -311,12 +327,13 @@ $(document).ready(function() {
 </section>
 
 <section>
-    <h2>Comparisson to mugration model</h2>
+    <h2>Inference under the Structured Coalescent</h2>
 </section>
 
 <section>
-    <h2>Inference under the Structured Coalescent</h2>
+    <h2>Comparisson to mugration model</h2>
 </section>
+
 
 <section>
     <h2>Software implementations of Bayesian SC inference</h2>
@@ -328,4 +345,8 @@ $(document).ready(function() {
 
 <section>
     <h2>Recommended reading</h2>
+
+    <ul>
+        <li>Gene genealogies and the coalescent (Hein et al.)</li>
+        <li>Inferring phylogenies (Felsenstein)</li>
 </section>
