Added MASTER script and notes.

--- a/lecture13/index.html
+++ b/lecture13/index.html
@@ -304,6 +304,8 @@ $(document).ready(function() {
     <ul>
         <li>Backward in time genealogical process corresponding to </li>
     </ul>
+
+    ** Diagram including coalescent and backward migration rates **
 </section>
 
 <section>
