Updated L13 reading list.

--- a/lecture13/index.html
+++ b/lecture13/index.html
@@ -448,9 +448,17 @@ $(document).ready(function() {
 <section>
     <h2>Recommended reading</h2>
 
-    <ul class="spaced" style="margin-top:15%">
-        <li>Handbook of Stochastic Methods (Gardiner)</li>
-        <li>Gene Genealogies, Variration and Evolution (Hein, Schierup, Wiuf)</li>
-        <li>Inferring phylogenies (Felsenstein)</li>
-    </ul>
+    <div style="width:100%;margin-top:15%">
+        <div class="figure" style="display:inline-block;height:300px">
+            <img data-src="stochmeth.jpeg">
+        </div>
+
+        <div class="figure" style="display:inline-block;height:300px;margin-left:2em">
+            <img data-src="InferringPhylogenies.jpg">
+        </div>
+
+        <div class="figure" style="display:inline-block;height:300px;margin-left:2em">
+            <img data-src="hein.jpeg">
+        </div>
+    </div>
 </section>
