--- a/lecture14/index.html
+++ b/lecture14/index.html
@@ -2,4 +2,66 @@
 lecture_num: 14
 ---
 
+<section>
+    <h2>Recombination</h2>
 
+    <ul class="spaced" style="width:80%">
+        <li>Occurs in eukaryotes, bacteria and viruses.</li>
+        <li>Eukaryotic recombination occurs during meiosis via chromosomal crossover.</li>
+        <li>Bacterial recombination occurs via
+            <ul>
+                <li>phage-mediated transduction,</li>
+                <li>natural transformation, and</li>
+                <li>conjugation.</li>
+            </ul>
+        </li>
+        <li>Viral recombination occurs when multiple strains infect a single cell. (Example: reassortment in influenza.)</li>
+    </ul>
+
+    <blockquote>
+        Extremely important for phylogenetics: affects the validity of the "tree" assumption!
+    </blockquote>
+</section>
+
+<section>
+    <h2>Wright-Fisher model with recombination</h2>
+
+    <ul>
+        <li>Consider an WF model with male and female diploid individuals.</li>
+        <li>Focus on a small segment of the genome.</li>
+    </ul>
+
+    <img data-src="WFrec.svg" style="width:100%">
+
+    <ul>
+        <li>Each child selects 1 male and 1 female parent uniformly at random.</li>
+        <li>With probability $r$ (which depends on the segment size) the two chromosome pairs of a parent are recombined before
+            being passed on.</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Wright-Fisher model with recombination</h2>
+
+    <img data-src="WFrec_chromosome.svg" style="width:100%">
+</section>
+
+<section>
+    <h2>Coalescent with recombination</h2>
+</section>
+
+<section>
+    <h2>Coalescent with gene conversion</h2>
+</section>
+
+<section>
+    <h2>Sequential Markovian Coalescent (SMC)</h2>
+</section>
+
+<section>
+    <h2>Population inference using SMC</h2>
+</section>
+
+<section>
+    <h2>Bayesian inference of ARGs</h2>
+</section>
