--- a/lecture14/index.html
+++ b/lecture14/index.html
@@ -236,12 +236,33 @@ Plotly.newPlot("potential", [trace], layout, {displayModeBar: false});
 
 <section>
     <h2>Algorithms for Bayesian ARG inference</h2>
+
+    <ul class="spaced" style="margin-top:10%">
+        <li>SMARTIE (<a class="cite" href="https://doi.org/10.1093/sysbio/syp076">Bloomquist and Suchard, 2010</a>)</li>
+        <li>ARGweaver (<a class="cite" href="http://dx.doi.org/10.1371/journal.pgen.1004342">Rasmussen et al, 2014</a>)</li>
+        <li>ClonalFrame (<a class="cite" href="https://dx.doi.org/10.1534/genetics.106.063305">Didelot and Falush, 2007</a>)</li>
+        <li>ClonalOrigin (<a class="cite" href="https://dx.doi.org/10.1534/genetics.110.120121">Didelot et al., 2010</a>)</li>
+    </ul>
 </section>
 
 <section>
     <h2>Summary</h2>
+
+    <ul class="spaced" style="margin-top:5%;width:80%">
+        <li>Recombination is an ever-present feature of real evolution.</li>
+        <li>Ignoring recombination when it is present can lead to biased phylogenetic inferences.</li>
+        <li>Coalescent models for recombination produce Ancestral Recombination Graphs (ARGs).</li>
+        <li>Coalescent models are derivable from modified Wright-Fisher process.</li>
+        <li>Sequentially Markovian approximation can be used to construct an HMM where TMRCAs are hidden states.</li>
+        <li>Full Bayesian inference of ARGs is an ongoing research topic.</li>
+    </ul>
+
 </section>
 
 <section>
     <h2>Recommended Reading</h2>
+
+    <div class="figure" style="display:inline-block;height:500px;margin-top:1em">
+        <img data-src="hein.jpeg">
+    </div>
 </section>
